--- a/.gitignore
+++ b/.gitignore
@@ -208,6 +208,8 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+# MacOS
+.DS_Store
 
 # Ignore data
 *.tsv
@@ -215,3 +217,6 @@ __marimo__/
 *.xlsx
 *.txt
 *.pth
+*.h5ad
+*.parquet
+*.json
